--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 click==6.7
 Flask==0.12.3
+gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 peewee==3.2.2
-psycopg2==2.7.4
+psycopg2==2.8.2
 Werkzeug==0.14.1
